project(louise LANGUAGES C CXX)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
message(STATUS "[${PROJECT_NAME}] SOURCE_DIR: ${CMAKE_SOURCE_DIR}")
message(STATUS "[${PROJECT_NAME}] CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
message(STATUS "[${PROJECT_NAME}] BINARY_DIR: ${CMAKE_BINARY_DIR}")

find_package(BISON REQUIRED)
find_package(FLEX REQUIRED)

# Sources.
set(LOUISE_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/parser/parser.c
)

# Parser.
BISON_TARGET(${LPARSER_TARGET}
  ${CMAKE_CURRENT_SOURCE_DIR}/parser/parser.y ${CMAKE_BINARY_DIR}/parser.tab.c
  DEFINES_FILE ${CMAKE_BINARY_DIR}/parser.tab.h
)

# Lexer.
FLEX_TARGET(${LLEXER_TARGET}
  ${CMAKE_CURRENT_SOURCE_DIR}/lexer/lexer.l
  ${CMAKE_BINARY_DIR}/lexer.y.c
)

ADD_FLEX_BISON_DEPENDENCY(${LLEXER_TARGET} ${LPARSER_TARGET})

add_library(${PROJECT_NAME} STATIC
  ${LOUISE_SOURCES}
  ${BISON_louise_parser_OUTPUTS}
  ${FLEX_louise_lexer_OUTPUTS}
)
add_library(louise::louise ALIAS louise)

target_include_directories(${PROJECT_NAME} PRIVATE
  ${CMAKE_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/parser
  ${CMAKE_CURRENT_SOURCE_DIR}/lexer
  ${CMAKE_BINARY_DIR}
)